<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/app_background"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/white"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/sort_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@android:color/white"
        android:layout_height="?listPreferredItemHeight"
        android:padding="@dimen/_8sdp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_title_menu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/title"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerId"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="?listPreferredItemHeight"
        android:padding="@dimen/_8sdp">


        <ImageView
            android:id="@+id/image_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_title_menu" />

        <TextView
            android:id="@+id/textId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/id"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_id"
            app:layout_constraintTop_toTopOf="@+id/image_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</LinearLayout>